@@ -118,6 +118,7 @@ struct peer_config {
 	bool silent;
 	unsigned short port;
 	char *key;
+	char *ecdsapublickey;
 	char *cipher;
 	char *compression;
 	char *digest;
