@@ -42,7 +42,7 @@ tinc_check_if_excluded(struct config *config, char *peername)
 }
 
 static bool
-tinc_generate_peer_config(struct string* buffer, struct peer_config *peer)
+tinc_generate_peer_config(struct config *config, struct string* buffer, struct peer_config *peer)
 {
 	CONCAT(buffer, COMMENT "this is an autogenerated file - do not edit!\n\n");
 
@@ -60,7 +60,14 @@ tinc_generate_peer_config(struct string* buffer, struct peer_config *peer)
 	CONCAT_SN(buffer, &peer->network6);
 
 	CONCAT_YN(buffer, "TCPonly=%s\n", peer->use_tcp_only);
-	CONCAT_F(buffer, "%s\n", peer->key);	
+	CONCAT_F(buffer, "%s\n\n", peer->key);
+
+	if (str_is_nonempty(peer->ecdsapublickey) &&
+	        (strnatcmp(config->tincd_version, "1.1") > 0)) {
+	        /* write ECDSA public key only for tinc 1.1+ */
+	        
+	        CONCAT_F(buffer, "ECDSAPublicKey=%s\n", peer->ecdsapublickey);
+        }
 
 	return true;
 }
@@ -88,7 +95,7 @@ tinc_write_hosts(struct config *config)
 
 		if (string_init(&peer_config, 2048, 512)) return false;
 
-		if (!tinc_generate_peer_config(&peer_config, i->peer_config)) {
+		if (!tinc_generate_peer_config(config, &peer_config, i->peer_config)) {
 			string_free(&peer_config);
 			return false;
 		}
